# wildsow.hs

./: .gitignore  ChangeLog.md  LICENSE  README.md  copyright.txt  nohup.out  wildsow-hs.cabal
app/: Main.hs
models/: logic.hs  model.hs
src/: Actions.hs  FreeWildsow.hs  GameSocket.hs  Json.hs  Model.hs  ModelUpdates.hs  NetworkManagement.hs  RandomBot.hs  Requisites.hs  Types.hs
src/GameNetwork/: GameSocket.hs  NetworkManagement.hs
src/Model/: Bots.hs  Evaluation.hs  Model.hs  Step.hs  Types.hs  Updates.hs  Validation.hs
test/Model/: BotsSpec.hs  UpdatesSpec.hs
ui/: bower.json  client.html  game.css  game.html  game.js  index.html  index.js  nohup.out  styles.css
ui/app/: app.config.js  app.module.js  app.routes.js
ui/app/components/0_login/: login.css  login.html  login.js
ui/app/components/1_overview/: overview.css  overview.html  overview.js
ui/app/components/2_lobby/: lobby.css  lobby.html  lobby.js
ui/app/components/3_game/: game.css  game.html  game.js
ui/app/components/4_error/: error.html  error.js
ui/app/services/: wildsowSocket.js
ui/bower_components/materialize/: .bower.json
