name:                wildsow-hs
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/wildsow-hs#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          robert.mueller1990@googlemail.com
copyright:           2017 Robert Mueller
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:  GameNetwork.GameSocket,
                    GameNetwork.NetworkManagement,
                    Model.Bots,
                    Model.Evaluation,
                    Model.Model,
                    Model.Step,
                    Model.Types,
                    Model.Updates,
                    Model.Validation

  build-depends:       base >= 4.7 && < 5
                       , containers, random, random-shuffle, transformers
                       , free, network, websockets
                       , text, aeson, either, stm, mtl
  default-language:    Haskell2010

executable wildsow-hs-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, wildsow-hs
  default-language:    Haskell2010

test-suite wildsow-hs-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  exposed-modules:     Model.BotsSpec
  other-modules:       Model.BotsSpec
  build-depends:       base, wildsow-hs, HUnit, QuickCheck, hspec, random, containers, random-shuffle, transformers
                       , free, network, websockets, text, aeson, either, stm, mtl
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/wildsow-hs
